// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cancel edit 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <div
    className="HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="Indent-root"
    >
      <div
        className=""
      >
        <div
          className="Comment-root"
          role="article"
        >
          <div
            className="Flex-root Flex-flex Flex-justifySpaceBetween Flex-directionRow"
          >
            <div
              className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
            >
              <span
                className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
              >
                Markus
              </span>
              <div
                className="Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow"
              >
                <time
                  className="Timestamp-root RelativeTime-root"
                  dateTime="2018-07-06T18:24:00.000Z"
                  title="2018-07-06T18:24:00.000Z"
                >
                  2018-07-06T18:24:00.000Z
                </time>
              </div>
            </div>
            <div>
              <button
                className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                Edit
              </button>
            </div>
          </div>
          <div
            className="HorizontalGutter-root HorizontalGutter-full"
          >
            <div
              className="HTMLContent-root"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "I like yoghurt",
                }
              }
            />
            <div
              className="Flex-root Flex-flex Flex-justifySpaceBetween"
            >
              <div
                className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                  disabled={false}
                  id="comments-commentContainer-replyButton-comment-with-replies"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Reply
                  </span>
                </button>
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="permalink-popover-comment-with-replies"
                    className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span>
                      Share
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="permalink-popover-comment-with-replies-ariainfo"
                    id="permalink-popover-comment-with-replies"
                    role="popup"
                  >
                    <div
                      className="AriaInfo-root"
                      id="permalink-popover-comment-with-replies-ariainfo"
                    >
                      A dialog showing the decision history
                    </div>
                  </div>
                </div>
                <button
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Respect
                  </span>
                </button>
              </div>
              <div
                className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
              >
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="report-popover-comment-with-replies"
                    className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span>
                      Report
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="report-popover-comment-with-replies-ariainfo"
                    id="report-popover-comment-with-replies"
                    role="popup"
                  >
                    <div
                      className="AriaInfo-root"
                      id="report-popover-comment-with-replies-ariainfo"
                    >
                      A dialog for reporting comments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`edit a comment and handle server error: edit form 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <form
    autoComplete="off"
    onSubmit={[Function]}
  >
    <div
      className="HorizontalGutter-root HorizontalGutter-full"
    >
      <div>
        <div
          className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
        >
          <span
            className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
          >
            Markus
          </span>
          <time
            className="Timestamp-root RelativeTime-root"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
        </div>
      </div>
      <div
        className="HorizontalGutter-root HorizontalGutter-half"
      >
        <label
          className="AriaInfo-root"
          htmlFor="comments-editCommentForm-rte-comment-with-replies"
        >
          Edit comment
        </label>
        <div>
          <div
            className=""
          >
            <div
              aria-placeholder="Edit comment"
              className="RTE-contentEditable RTE-content"
              contentEditable={true}
              dangerouslySetInnerHTML={
                Object {
                  "__html": "I like yoghurt",
                }
              }
              disabled={false}
              id="comments-editCommentForm-rte-comment-with-replies"
              onBlur={[Function]}
              onChange={[Function]}
              onCut={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onPaste={[Function]}
              onSelect={[Function]}
            />
            <div
              className="RTE-toolbar RTE-toolbarBottom Toolbar-toolbar"
            >
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Bold"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_bold
                </span>
              </button>
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Italic"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_italic
                </span>
              </button>
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Blockquote"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_quote
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="Message-root Message-colorGrey Message-fullWidth"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            alarm
          </span>
          <span>
            Edit: 
            <time
              className="RelativeTime-root"
              dateTime="2018-07-06T18:24:30.000Z"
              title="2018-07-06T18:24:30.000Z"
            >
              2018-07-06T18:24:30.000Z
            </time>
             remaining
          </span>
        </div>
      </div>
      <div
        className="Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd Flex-directionRow"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutlined"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled Button-disabled"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          Save Changes
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`edit a comment: edit form 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <form
    autoComplete="off"
    onSubmit={[Function]}
  >
    <div
      className="HorizontalGutter-root HorizontalGutter-full"
    >
      <div>
        <div
          className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
        >
          <span
            className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
          >
            Markus
          </span>
          <time
            className="Timestamp-root RelativeTime-root"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
        </div>
      </div>
      <div
        className="HorizontalGutter-root HorizontalGutter-half"
      >
        <label
          className="AriaInfo-root"
          htmlFor="comments-editCommentForm-rte-comment-with-replies"
        >
          Edit comment
        </label>
        <div>
          <div
            className=""
          >
            <div
              aria-placeholder="Edit comment"
              className="RTE-contentEditable RTE-content"
              contentEditable={true}
              dangerouslySetInnerHTML={
                Object {
                  "__html": "I like yoghurt",
                }
              }
              disabled={false}
              id="comments-editCommentForm-rte-comment-with-replies"
              onBlur={[Function]}
              onChange={[Function]}
              onCut={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onPaste={[Function]}
              onSelect={[Function]}
            />
            <div
              className="RTE-toolbar RTE-toolbarBottom Toolbar-toolbar"
            >
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Bold"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_bold
                </span>
              </button>
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Italic"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_italic
                </span>
              </button>
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Blockquote"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_quote
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="Message-root Message-colorGrey Message-fullWidth"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            alarm
          </span>
          <span>
            Edit: 
            <time
              className="RelativeTime-root"
              dateTime="2018-07-06T18:24:30.000Z"
              title="2018-07-06T18:24:30.000Z"
            >
              2018-07-06T18:24:30.000Z
            </time>
             remaining
          </span>
        </div>
      </div>
      <div
        className="Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd Flex-directionRow"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutlined"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled Button-disabled"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          Save Changes
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`edit a comment: optimistic response 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <form
    autoComplete="off"
    onSubmit={[Function]}
  >
    <div
      className="HorizontalGutter-root HorizontalGutter-full"
    >
      <div>
        <div
          className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
        >
          <span
            className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
          >
            Markus
          </span>
          <time
            className="Timestamp-root RelativeTime-root"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
        </div>
      </div>
      <div
        className="HorizontalGutter-root HorizontalGutter-half"
      >
        <label
          className="AriaInfo-root"
          htmlFor="comments-editCommentForm-rte-comment-with-replies"
        >
          Edit comment
        </label>
        <div>
          <div
            className=""
          >
            <div
              aria-placeholder="Edit comment"
              className="RTE-contentEditable RTE-content  RTE-contentEditableDisabled"
              contentEditable={false}
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Edited!",
                }
              }
              disabled={true}
              id="comments-editCommentForm-rte-comment-with-replies"
              onBlur={[Function]}
              onChange={[Function]}
              onCut={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onPaste={[Function]}
              onSelect={[Function]}
            />
            <div
              className="RTE-toolbar  RTE-toolbarDisabled RTE-toolbarBottom Toolbar-toolbar"
            >
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Bold"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_bold
                </span>
              </button>
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Italic"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_italic
                </span>
              </button>
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Blockquote"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_quote
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="Message-root Message-colorGrey Message-fullWidth"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            alarm
          </span>
          <span>
            Edit: 
            <time
              className="RelativeTime-root"
              dateTime="2018-07-06T18:24:30.000Z"
              title="2018-07-06T18:24:30.000Z"
            >
              2018-07-06T18:24:30.000Z
            </time>
             remaining
          </span>
        </div>
      </div>
      <div
        className="Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd Flex-directionRow"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutlined Button-disabled"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantFilled Button-disabled"
          disabled={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="submit"
        >
          Save Changes
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`edit a comment: render comment with edit button 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <div
    className="HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="Indent-root"
    >
      <div
        className=""
      >
        <div
          className="Comment-root"
          role="article"
        >
          <div
            className="Flex-root Flex-flex Flex-justifySpaceBetween Flex-directionRow"
          >
            <div
              className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
            >
              <span
                className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
              >
                Markus
              </span>
              <div
                className="Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow"
              >
                <time
                  className="Timestamp-root RelativeTime-root"
                  dateTime="2018-07-06T18:24:00.000Z"
                  title="2018-07-06T18:24:00.000Z"
                >
                  2018-07-06T18:24:00.000Z
                </time>
              </div>
            </div>
            <div>
              <button
                className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                Edit
              </button>
            </div>
          </div>
          <div
            className="HorizontalGutter-root HorizontalGutter-full"
          >
            <div
              className="HTMLContent-root"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "I like yoghurt",
                }
              }
            />
            <div
              className="Flex-root Flex-flex Flex-justifySpaceBetween"
            >
              <div
                className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                  disabled={false}
                  id="comments-commentContainer-replyButton-comment-with-replies"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Reply
                  </span>
                </button>
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="permalink-popover-comment-with-replies"
                    className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span>
                      Share
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="permalink-popover-comment-with-replies-ariainfo"
                    id="permalink-popover-comment-with-replies"
                    role="popup"
                  >
                    <div
                      className="AriaInfo-root"
                      id="permalink-popover-comment-with-replies-ariainfo"
                    >
                      A dialog showing the decision history
                    </div>
                  </div>
                </div>
                <button
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Respect
                  </span>
                </button>
              </div>
              <div
                className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
              >
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="report-popover-comment-with-replies"
                    className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span>
                      Report
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="report-popover-comment-with-replies-ariainfo"
                    id="report-popover-comment-with-replies"
                    role="popup"
                  >
                    <div
                      className="AriaInfo-root"
                      id="report-popover-comment-with-replies-ariainfo"
                    >
                      A dialog for reporting comments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`edit a comment: server response 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <div
    className="HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="Indent-root"
    >
      <div
        className=""
      >
        <div
          className="Comment-root"
          role="article"
        >
          <div
            className="Flex-root Flex-flex Flex-justifySpaceBetween Flex-directionRow"
          >
            <div
              className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
            >
              <span
                className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
              >
                Markus
              </span>
              <div
                className="Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow"
              >
                <time
                  className="Timestamp-root RelativeTime-root"
                  dateTime="2018-07-06T18:24:00.000Z"
                  title="2018-07-06T18:24:00.000Z"
                >
                  2018-07-06T18:24:00.000Z
                </time>
                <div
                  className="EditedMarker-root"
                >
                  (
                  <span>
                    Edited
                  </span>
                  )
                </div>
              </div>
            </div>
            <div>
              <button
                className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                Edit
              </button>
            </div>
          </div>
          <div
            className="HorizontalGutter-root HorizontalGutter-full"
          >
            <div
              className="HTMLContent-root"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Edited! (from server)",
                }
              }
            />
            <div
              className="Flex-root Flex-flex Flex-justifySpaceBetween"
            >
              <div
                className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                  disabled={false}
                  id="comments-commentContainer-replyButton-comment-with-replies"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Reply
                  </span>
                </button>
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="permalink-popover-comment-with-replies"
                    className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span>
                      Share
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="permalink-popover-comment-with-replies-ariainfo"
                    id="permalink-popover-comment-with-replies"
                    role="popup"
                  >
                    <div
                      className="AriaInfo-root"
                      id="permalink-popover-comment-with-replies-ariainfo"
                    >
                      A dialog showing the decision history
                    </div>
                  </div>
                </div>
                <button
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Respect
                  </span>
                </button>
              </div>
              <div
                className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
              >
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="report-popover-comment-with-replies"
                    className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span>
                      Report
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="report-popover-comment-with-replies-ariainfo"
                    id="report-popover-comment-with-replies"
                    role="popup"
                  >
                    <div
                      className="AriaInfo-root"
                      id="report-popover-comment-with-replies-ariainfo"
                    >
                      A dialog for reporting comments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows expiry message: edit form closed 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <div
    className="HorizontalGutter-root HorizontalGutter-full"
  >
    <div
      className="Indent-root"
    >
      <div
        className=""
      >
        <div
          className="Comment-root"
          role="article"
        >
          <div
            className="Flex-root Flex-flex Flex-justifySpaceBetween Flex-directionRow"
          >
            <div
              className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
            >
              <span
                className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
              >
                Markus
              </span>
              <div
                className="Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow"
              >
                <time
                  className="Timestamp-root RelativeTime-root"
                  dateTime="2018-07-06T18:24:00.000Z"
                  title="2018-07-06T18:24:00.000Z"
                >
                  2018-07-06T18:24:00.000Z
                </time>
              </div>
            </div>
            <div>
              <button
                className="BaseButton-root Button-root Button-sizeRegular Button-colorPrimary Button-variantUnderlined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="button"
              >
                Edit
              </button>
            </div>
          </div>
          <div
            className="HorizontalGutter-root HorizontalGutter-full"
          >
            <div
              className="HTMLContent-root"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "I like yoghurt",
                }
              }
            />
            <div
              className="Flex-root Flex-flex Flex-justifySpaceBetween"
            >
              <div
                className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
              >
                <button
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                  disabled={false}
                  id="comments-commentContainer-replyButton-comment-with-replies"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Reply
                  </span>
                </button>
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="permalink-popover-comment-with-replies"
                    className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span>
                      Share
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="permalink-popover-comment-with-replies-ariainfo"
                    id="permalink-popover-comment-with-replies"
                    role="popup"
                  >
                    <div
                      className="AriaInfo-root"
                      id="permalink-popover-comment-with-replies-ariainfo"
                    >
                      A dialog showing the decision history
                    </div>
                  </div>
                </div>
                <button
                  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="button"
                >
                  <span>
                    Respect
                  </span>
                </button>
              </div>
              <div
                className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
              >
                <div
                  className="Popover-root"
                >
                  <button
                    aria-controls="report-popover-comment-with-replies"
                    className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                    disabled={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    <span>
                      Report
                    </span>
                  </button>
                  <div
                    aria-hidden={true}
                    aria-labelledby="report-popover-comment-with-replies-ariainfo"
                    id="report-popover-comment-with-replies"
                    role="popup"
                  >
                    <div
                      className="AriaInfo-root"
                      id="report-popover-comment-with-replies-ariainfo"
                    >
                      A dialog for reporting comments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows expiry message: edit time expired 1`] = `
<div
  data-testid="comment-comment-with-replies"
>
  <form
    autoComplete="off"
    onSubmit={[Function]}
  >
    <div
      className="HorizontalGutter-root HorizontalGutter-full"
    >
      <div>
        <div
          className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
        >
          <span
            className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
          >
            Markus
          </span>
          <time
            className="Timestamp-root RelativeTime-root"
            dateTime="2018-07-06T18:24:00.000Z"
            title="2018-07-06T18:24:00.000Z"
          >
            2018-07-06T18:24:00.000Z
          </time>
        </div>
      </div>
      <div
        className="HorizontalGutter-root HorizontalGutter-half"
      >
        <label
          className="AriaInfo-root"
          htmlFor="comments-editCommentForm-rte-comment-with-replies"
        >
          Edit comment
        </label>
        <div>
          <div
            className=""
          >
            <div
              aria-placeholder="Edit comment"
              className="RTE-contentEditable RTE-content  RTE-contentEditableDisabled"
              contentEditable={false}
              dangerouslySetInnerHTML={
                Object {
                  "__html": "I like yoghurt",
                }
              }
              disabled={true}
              id="comments-editCommentForm-rte-comment-with-replies"
              onBlur={[Function]}
              onChange={[Function]}
              onCut={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onPaste={[Function]}
              onSelect={[Function]}
            />
            <div
              className="RTE-toolbar  RTE-toolbarDisabled RTE-toolbarBottom Toolbar-toolbar"
            >
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Bold"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_bold
                </span>
              </button>
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Italic"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_italic
                </span>
              </button>
              <button
                className="Button-button"
                disabled={false}
                onClick={[Function]}
                title="Blockquote"
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="Icon-root Icon-md"
                >
                  format_quote
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="Message-root Message-colorError Message-fullWidth"
        >
          <span
            aria-hidden="true"
            className="Icon-root Icon-sm MessageIcon-root"
          >
            warning
          </span>
          Edit time has expired. You can no longer edit this comment. Why not post another one?
        </div>
      </div>
      <div
        className="Flex-root Flex-flex Flex-halfItemGutter Flex-justifyFlexEnd Flex-directionRow"
      >
        <button
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantOutlined"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </form>
</div>
`;
